Add PlatformTarget to project

--- a/DesktopBridgeSample.Forms/DesktopBridgeSample.Forms.csproj
+++ b/DesktopBridgeSample.Forms/DesktopBridgeSample.Forms.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
     <RuntimeIdentifiers>win-x86</RuntimeIdentifiers>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
